--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Users</h1>
 
+<%= form_tag search_users_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search %>
+    <%= submit_tag "Search" %>
+  </p>
+<% end %>
+
 <% @users.each do |user| %>
 
   <% if user != current_user %>
