--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,9 @@
           <h1><%= "#{@user.name}" %></h1>
           <p><%= "#{@user.email}" %></p>
           <p><%= "#{@user.sex.capitalize}" %></p>
+          <% if current_user.name == 'Ada Lovelace' %>
+            <p>[ <%= link_to 'Edit', edit_user_path(@user) %> | <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> ]</p>
+          <% end %>
         </td>
       </tr>
     </table>
