All views redirect to login page if not already signed in

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -19,12 +19,8 @@ Dashboard Index
 
   <tr>
     <td>
-      Total visits:
+      Average bounce:
     </td>
     <td>
     </td>
   </tr>
-
-<%= @referer.inspect %>
-
-<%= @remote_ip %>
