--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <div class='id_bar'>
     <% if current_user %>
-      <%= link_to 'Home', newsfeed_path %> | <%= link_to "#{current_user.name}", user_path(current_user) %> | <%= link_to 'Edit', edit_user_path(current_user) %> | <%= link_to 'Log out', log_out_path %>
+      <%= link_to 'Home', newsfeed_path %> | <%= link_to "#{current_user.name}", user_path(current_user) %> | <%= link_to 'Edit', edit_user_path(current_user) %> | <%= link_to 'Analytics', dashboard_path %> | <%= link_to 'Log out', log_out_path %>
     <% end %>
   </div>
 
