Page view and total visit analytics implemented

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,7 +3,7 @@ Dashboard Index
 <table>
   <tr>
     <td>
-      Total visits:
+      Total visits: <%= @current_visitor.visit_count %>
     </td>
     <td>
     </td>
@@ -19,7 +19,7 @@ Dashboard Index
 
   <tr>
     <td>
-      Average bounce:
+      Page views: <%= @current_visitor.pageview_count %>
     </td>
     <td>
     </td>
