Added unique visits to dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,7 +11,7 @@ Dashboard Index
 
   <tr>
     <td>
-      Unique visits:
+      Unique visits: <%= @total_visits %>
     </td>
     <td>
     </td>
