Added analytics link to landing page

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,7 +11,7 @@ Dashboard Index
 
   <tr>
     <td>
-      Unique visits: <%= @total_visits %>
+      Unique visitors: <%= @total_visits %>
     </td>
     <td>
     </td>
@@ -19,7 +19,7 @@ Dashboard Index
 
   <tr>
     <td>
-      Page views: <%= Visitor.total_pageviews %>
+      Total page views: <%= Visitor.total_pageviews %>
     </td>
     <td>
     </td>
