--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <% if current_user %>
       <%= link_to 'Home', newsfeed_path %> | <%= link_to "#{current_user.name}", user_path(current_user) %> | <%= link_to 'Edit', edit_user_path(current_user) %> | <%= link_to 'Analytics', dashboard_path %> | <%= link_to 'Log out', log_out_path %>
     <% else %>
-      <%= link_to 'Analytics', dashboard_path %> | <%= link_to 'Log in', log_inpath %>
+      <%= link_to 'Analytics', dashboard_path %> | <%= link_to 'Log in', log_in_path %>
     <% end %>
   </div>
 
