Visitor model stores browser data

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -15,7 +15,7 @@
       Unique visitors:
     </td>
     <td>
-      <%= @total_visits %>
+      <%= @unique_visitors %>
     </td>
   </tr>
 
@@ -24,7 +24,7 @@
       Firefox:
     </td>
     <td>
-      <%= @total_visits %>
+      <%= @firefox_users %>
     </td>
   </tr>
 
@@ -33,7 +33,7 @@
       Chrome:
     </td>
     <td>
-      <%= @total_visits %>
+      <%= @chrome_users %>
     </td>
   </tr>
 
@@ -42,7 +42,7 @@
       Safari:
     </td>
     <td>
-      <%= @total_visits %>
+      <%= @safari_users %>
     </td>
   </tr>
 
@@ -51,7 +51,7 @@
       Internet Explorer:
     </td>
     <td>
-      <%= @total_visits %>
+      <%= @ie_users %>
     </td>
   </tr>
 
