--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Analytics Dashboard</h1>
 
+<canvas id="canvas" width=500 height=400></canvas>
+
 <table>
   <tr>
     <td>
@@ -16,6 +18,24 @@
     </td>
     <td>
       <%= @unique_visitors %>
+    </td>
+  </tr>
+
+  <tr>
+    <td>
+      New visitors:
+    </td>
+    <td>
+      <%= @new_visitors %>
+    </td>
+  </tr>
+
+  <tr>
+    <td>
+      Returning visitors:
+    </td>
+    <td>
+      <%= @returning_visitors %>
     </td>
   </tr>
 
